# MarketWatch

./: .gitignore  Cargo.toml  PLAN.md  README.md  config.example.toml
frontend/: FRONTEND_BOOKKEEPING_PLAN.md  index.html  package-lock.json  package.json
frontend/src/: main.tsx
frontend/src/api/: chart.ts  details.ts  industries.ts  market.ts  themes.ts  tickerCollections.ts  tickers.ts  topStocks.ts  watchlists.ts
frontend/src/app/: App.tsx  AppShell.tsx  styles.css  theme.ts
frontend/src/components/: SplitTradingViewCharts.tsx  TickerDetailsDialog.tsx  TickerFundamentalsTab.tsx  TickerProfileThemesTab.tsx  Toast.tsx  TradingViewChart.tsx  split-trading-view-charts.css  ticker-details-dialog.css
frontend/src/features/csv-analyzer/: CsvAnalyzerPage.tsx  csv-analyzer.css
frontend/src/features/favourites/: FavouritesPage.tsx
frontend/src/features/market-watch/: MarketWatchPage.tsx
frontend/src/features/rrg/: RrgControls.tsx  RrgPage.tsx  RrgSidePanel.tsx  RrgThemeList.tsx  ThemeChartDialog.tsx  rrg.css  rrgChart.ts  rrgTypes.ts
frontend/src/features/theme-management/: AssignmentsTab.tsx  AutomaticTab.tsx  IndustryFilter.tsx  ThemeManagementPage.tsx  ThemesTab.tsx  TickerListControls.tsx  VirtualTickerList.tsx  theme-management.css  themeManagementUtils.ts
frontend/src/features/ticker-lens/: ChartHeader.tsx  ChartPanel.tsx  GroupPanel.tsx  TickerLens.tsx  TickerPanel.tsx  chart-header.css  constants.ts  ticker-lens.css  types.ts  utils.ts
frontend/src/features/top-stocks/: TopStocksPage.tsx  top-stocks.css
frontend/src/features/watchlists/: WatchlistIcon.tsx  WatchlistsPage.tsx  watchlists.css
frontend/src/shared/: useDebouncedValue.ts  useFocusRefresh.ts  useLocalStorageState.ts
migrations/: 0001_initial.sql  01_initial.sql  02_market_data.sql  03_industry_membership.sql  04_fundamentals.sql  05_themes.sql  06_theme_ai_jobs.sql  07_watchlists.sql  08_industry_membership_names.sql  09_nyse_holidays.sql  10_theme_ai_partial_jobs.sql  11_theme_ai_processed_backfill.sql  12_watchlist_icons.sql
src/: app.rs  config.rs  constants.rs  main.rs  providers.rs  store.rs  utils.rs
src/api/: chart.rs  details.rs  industries.rs  market.rs  mod.rs  themes.rs  ticker_collections.rs  tickers.rs  top_stocks.rs  watchlists.rs
src/models/: exchange.rs  fundamentals.rs  market_data.rs  mod.rs  performance.rs  rrg.rs  themes.rs  ticker_collection.rs  watchlists.rs
src/providers/: ai.rs  finviz.rs  tradingview.rs
src/providers/finviz/: mod.rs
src/providers/yahoo/: de.rs  error.rs  mod.rs
src/services/: chart.rs  details.rs  industries.rs  industry_analysis.rs  mod.rs  nyse_calendar.rs  theme_analysis.rs  themes.rs  ticker_collections.rs  tickers.rs  top_stocks.rs  watchlists.rs  yahoo.rs
src/store/: fundamentals.rs  industries.rs  market_data.rs  memberships.rs  mod.rs  themes.rs  watchlists.rs
(+5 files in other folders)
