[package]
name = "market_watch"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.9"
chrono = { version = "0.4.45", features = ["serde"] }
chrono-tz = "0.10.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.9.0", features = ["runtime-tokio", "sqlite", "migrate"] }
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "signal"] }
toml = "1.1.2"
tower-http = { version = "0.6.11", features = ["fs", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
