[package]
name = "market_watch"
version = "0.1.0"
edition = "2024"

[profile.release]
lto = true
strip = true
codegen-units = 1

[dependencies]
# Application and runtime
chrono = { version = "0.4.45", features = ["serde"] }
chrono-tz = "0.10.4"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }

# Error handling
anyhow = "1.0.102"
thiserror = "2.0.18"

# Web
axum = "0.8.9"
tower-http = { version = "0.6.11", features = ["fs", "trace"] }

# Persistence
sqlx = { version = "0.9.0", features = ["runtime-tokio", "sqlite", "migrate", "chrono"] }

# External providers
fastrand = "2.4.1"
reqwest = { version = "0.13.4", features = ["brotli", "cookies", "deflate", "gzip", "zstd"] }
scraper = "0.27.0"

# Configuration and serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
toml = "1.1.2"

# Observability
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
